zkay/examples/type_errors/Indexing.sol
pragma solidity ^0.5.0;

contract Indexing {

    mapping(address!x => uint@x) values;
	uint@all x;


	function f() public {
		x = values[me];
	}

}
